--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
       <version>6.13.1</version>
       <scope>compile</scope>
     </dependency>
+      <dependency>
+          <groupId>commons-io</groupId>
+          <artifactId>commons-io</artifactId>
+          <version>2.6</version>
+          <scope>test</scope>
+      </dependency>
 
   </dependencies>
 
